--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.6.0",
     "passport-google-id-token": "^0.4.7",
     "passport-jwt": "^4.0.1",
+    "path": "^0.12.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
