--- a/api/package.json
+++ b/api/package.json
@@ -31,7 +31,7 @@
     "typescript": "^5.1.6"
   },
   "scripts": {
-    "start": "nodemon --watch \"src/*\" --ext \"ts,json\" --ignore \"src//.spec.ts\" --exec \"ts-node src/server.ts\""
+    "start": "pm2 start ts-node -- -P tsconfig.server.json ./api/src/server.ts"
   },
   "engines": {
     "node": ">=14.20.1"
