--- a/api/package.json
+++ b/api/package.json
@@ -26,12 +26,14 @@
     "passport-google-id-token": "^0.4.7",
     "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
+    "pm2": "^5.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "scripts": {
     "start0": "nodemon --watch \"src/*\" --ext \"ts,json\" --ignore \"src//.spec.ts\" --exec \"ts-node src/server.ts\"",
-    "start": "pm2 start ts-node --watch -- -P tsconfig.server.json ./api/src/server.ts"
+    "start": "pm2 start --interpreter none 'yarn ts-node -r ./src/server.ts'",
+    "startapp":"pm2 start --interpreter none 'yarn ts-node -r ./src/app.ts'"
   },
   "engines": {
     "node": ">=14.20.1"
