--- a/api/package.json
+++ b/api/package.json
@@ -32,8 +32,8 @@
   },
   "scripts": {
     "start0": "nodemon --watch \"src/*\" --ext \"ts,json\" --ignore \"src//.spec.ts\" --exec \"ts-node src/server.ts\"",
-    "start": "pm2 start --interpreter none 'yarn ts-node -r ./src/server.ts'",
-    "startapp":"pm2 start --interpreter none 'yarn ts-node -r ./src/app.ts'"
+    "start": "pm2 start --interpreter none ' ts-node ./src/server.ts'",
+    "startapp": "pm2 start --interpreter none 'yarn ts-node -r ./src/app.ts'"
   },
   "engines": {
     "node": ">=14.20.1"
